force-app/main/default/objects/custom_create103__c/custom_create103__c.object-meta.xml
<CustomObject>
    <label>Custom created object103</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects103</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>