force-app/main/default/objects/custom_create103__c/fields/custom_create_103field547__c.field-meta.xml
<CustomField>
    <fullName>custom_create_103field547__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 103field547</label>
    <type>Checkbox</type>
</CustomField>